--- a/partners.html
+++ b/partners.html
@@ -25,7 +25,7 @@
           <li><a href="program.html">PROGRAMA</a></li>
           <li><a href="partners.html">PARCEIROS</a></li>
           <li><a href="team.html">EQUIPA</a></li>
-          <li><a href="tickets.html">BILHETES</a></li>
+          <!-- <li><a href="tickets.html">BILHETES</a></li> -->
           <li><a href="anemia.html">ANEMIA</a></li>
           <li><a href="#">EDIÇÃO ANTERIOR</a></li>
         </ul>
@@ -38,7 +38,7 @@
             <a href="program.html">PROGRAMA</a>
             <a href="partners.html">PARCEIROS</a>
             <a href="team.html">EQUIPA</a>
-            <a href="tickets.html">BILHETES</a>
+            <!-- <a href="tickets.html">BILHETES</a> -->
             <a href="anemia.html">ANEMIA</a>
             <a href="#">EDIÇÃO ANTERIOR</a>
           </div>
@@ -73,57 +73,14 @@
 
 
       <h3 class="tec">TECNOLÓGICOS</h3>
-      <div class="c-my-flooper js-flooper3">
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://www.facebook.com/jeknowledge/" target="_blank"><img src="img/partners/jek.png" alt="logo" id="jek"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="http://www.sleeklab.com/" target="_blank"><img src="img/partners/sleek.png" alt="logo" id="sleek"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://slidedog.com/" target="_blank"><img src="img/partners/sdog.png" alt="logo" id="sdog"></a>
-        </div>
-      </div>
+      <a href="https://www.facebook.com/jeknowledge/" target="_blank"><img src="img/partners/jek.png" alt="logo" id="jek"></a>
 
-      <h3 class="log">LOGÍSTICOS</h3>
-      <div class="c-my-flooper js-flooper4">
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="http://singularprint.pt/" target="_blank"><img src="img/partners/singular.png" alt="logo" id="singular"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://shoyce.pt/" target="_blank"><img src="img/partners/shoyce.png" alt="logo" id="shoyce"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://fruut.pt/" target="_blank"><img src="img/partners/fruut.png" alt="logo" id="fruut"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="http://www.illy.com/wps/wcm/connect/pt/home" target="_blank"><img src="img/partners/illy.jpg" alt="logo" id="illy"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://www.facebook.com/green.coimbra/" target="_blank"><img src="img/partners/green.jpg" alt="logo" id="green"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="http://izidoro.pt/" target="_blank"><img src="img/partners/izidoro.png" alt="logo" id="izidoro"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://www.diatosta.pt/pt/" target="_blank"><img src="img/partners/diatosta.png" alt="logo" id="diatosta"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="http://www.deltacafes.pt/" target="_blank"><img src="img/partners/delta.png" alt="logo" id="delta"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://www.glood.pt/" target="_blank"><img src="img/partners/glood.jpg" alt="logo" id="glood"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="" target="_blank"><img src="img/partners/zonapro.jpg" alt="logo" id="zonapro"></a>
-        </div>
-        <div class="c-my-flooper__el js-flooper-item">
-          <a href="https://turismodocentro.pt/" target="_blank"><img src="img/partners/turismo.png" alt="logo" id="turismo"></a>
-        </div>
-      </div>
 
-      <h3>PARCEIRO INSTITUCIONAL</h3>
+      <h3>PARCEIROS INSTITUCIONAIS</h3>
+      <div class="inst">
       <a href="https://www.uc.pt/" target="_blank"><img src="img/partners/uc.png" alt="logo" id="uc"></a>
+      <a href="https://www.cm-coimbra.pt/" target="_blank"><img src="img/partners/cmc.svg" alt="logo" id="cmc"></a>
+      </div>
 
     </section>
 
