--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
           <li><a href="program.html">PROGRAMA</a></li>
           <li><a href="partners.html">PARCEIROS</a></li>
           <li><a href="team.html">EQUIPA</a></li>
-          <li><a href="tickets.html">BILHETES</a></li>
+          <!-- <li><a href="tickets.html">BILHETES</a></li> -->
           <li><a href="anemia.html">ANEMIA</a></li>
           <li><a href="#">EDIÇÃO ANTERIOR</a></li>
         </ul>
@@ -38,7 +38,7 @@
             <a href="program.html">PROGRAMA</a>
             <a href="partners.html">PARCEIROS</a>
             <a href="team.html">EQUIPA</a>
-            <a href="tickets.html">BILHETES</a>
+            <!-- <a href="tickets.html">BILHETES</a> -->
             <a href="anemia.html">ANEMIA</a>
             <a href="#">EDIÇÃO ANTERIOR</a>
           </div>
@@ -65,204 +65,199 @@
 
 
     <section id="members">
-      <h1>NÚCLEO DE GESTÃO</h1>
-      <div class="container_members1">
-        <div class="member_1 member">
-          <img src="img/ribs.jpg" width="150" height="150">
-          <h2>ANA MARGARIDA RIBEIRO</h2>
-          <h3>FMUC</h3>
-          <h2>ORGANIZADORA</h2>
+
+      <h1>COORDENAÇÃO</h1>
+      <div class="m-container org1">
+        <div class="member">
+          <img src='img/team/nuno sampaio_1.png' onmouseover="this.src='img/team/nuno sampaio_2.png';" onmouseout="this.src='img/team/nuno sampaio_1.png';" />
+          <h2>Nuno Sampaio</h2>
+          <p>Organizador</p>
+          <p>FMUC</p>
         </div>
-        <div class="member_2 member">
-          <img src="img/joana_silva.jpg" width="150" height="150">
-          <h2>JOANA SILVA</h2>
-          <h3>FMUC</h3>
-          <h2>CO-ORGANIZADORA</h2>
+        <div class="member">
+          <img src='img/team/tiago jorge costa_1.png' onmouseover="this.src='img/team/tiago jorge costa_2.png';" onmouseout="this.src='img/team/tiago jorge costa_1.png';" />
+          <h2>Tiago Jorge Costa</h2>
+          <p>Coorganizador</p>
+          <p>FMUC</p>
+        </div>
+      </div>
+      <div class="m-container org2">
+        <div class="member">
+          <img src='img/team/raquel soares rodrigues_1.png' onmouseover="this.src='img/team/raquel soares rodrigues_2.png';" onmouseout="this.src='img/team/raquel soares rodrigues_1.png';" />
+          <h2>Raquel Soares Rodrigues</h2>
+          <p>Oradores</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/rodrigo morgado_1.png' onmouseover="this.src='img/team/rodrigo morgado_2.png';" onmouseout="this.src='img/team/rodrigo morgado_1.png';" />
+          <h2>Rodrigo Morgado</h2>
+          <p>Logística</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/bernardo filipe_1.png' onmouseover="this.src='img/team/bernardo filipe_2.png';" onmouseout="this.src='img/team/bernardo filipe_1.png';" />
+          <h2>Bernardo Filipe</h2>
+          <p>Logística</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/ana catarina lopes_1.png' onmouseover="this.src='img/team/ana catarina lopes_2.png';" onmouseout="this.src='img/team/ana catarina lopes_1.png';" />
+          <h2>Ana Catarina Lopes</h2>
+          <p>Imagem</p>
+          <p>FCTUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/brenda toro_1.png' onmouseover="this.src='img/team/brenda toro_2.png';" onmouseout="this.src='img/team/brenda toro_1.png';" />
+          <h2>Brenda Toro</h2>
+          <p>Comunicação</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/joao sequeira_1.png' onmouseover="this.src='img/team/joao sequeira_2.png';" onmouseout="this.src='img/team/joao sequeira_1.png';" />
+          <h2>João Francisco Sequeira</h2>
+          <p>Fundraising</p>
+          <p>FMUC</p>
         </div>
       </div>
 
-      <div class="container_members2">
-        <div class="member_1 member2">
-          <img src="img/tiago_jorge.jpg" width="150" height="150">
-          <h2>TIAGO JORGE COSTA</h2>
-          <h3>FMUC</h3>
-          <h2>IMAGEM</h2>
+
+      <h1>EQUIPA</h1>
+      <div class="m-container log">
+        <div class="member">
+          <img src='img/team/carla maravilha_1.png' onmouseover="this.src='img/team/carla maravilha_2.png';" onmouseout="this.src='img/team/carla maravilha_1.png';" />
+          <h2>Carla Maravilha</h2>
+          <p>Logística</p>
+          <p>FMUC</p>
         </div>
-        <div class="member_2 member2">
-          <img src="img/mariana_cardoso.jpg" width="150" height="150">
-          <h2>MARIANA CARDOSO</h2>
-          <h3>FMUC</h3>
-          <h2>COMUNICAÇÃO</h2>
+        <div class="member">
+          <img src='img/team/lara santos_1.png' onmouseover="this.src='img/team/lara santos_2.png';" onmouseout="this.src='img/team/lara santos_1.png';" />
+          <h2>Lara Santos</h2>
+          <p>Logística</p>
+          <p>FDUC</p>
         </div>
-        <div class="member_3 member2">
-          <img src="img/joao_sobral.jpg" width="150" height="150">
-          <h2>JOÃO SOBRAL</h2>
-          <h3>FMUC</h3>
-          <h2>ORADORES</h2>
+        <div class="member">
+          <img src='img/team/ana carolina paulino_1.png' onmouseover="this.src='img/team/ana carolina paulino_2.png';" onmouseout="this.src='img/team/ana carolina paulino_1.png';" />
+          <h2>Ana Carolina Paulino</h2>
+          <p>Logística</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_4 member2">
-          <img src="img/joão_sequeira.jpg" width="150" height="150">
-          <h2>JOÃO SEQUEIRA</h2>
-          <h3>FMUC</h3>
-          <h2>LOGÍSTICA</h2>
-        </div>
-        <div class="member_5 member2">
-          <img src="img/pedro_neto.jpg" width="150" height="150">
-          <h2>PEDRO NETO</h2>
-          <h3>FMUC</h3>
-          <h2>FUNDRAISING</h2>
-        </div>
-      </div>
-      <h1>COLABORADORES</h1>
-      <div class="container_members3">
-        <div class="member_1 member3">
-          <img src="img/ana_constante.jpg" width="150" height="150">
-          <h2>ANA CONSTANTE</h2>
-          <h3>FMUC</h3>
-          <h2>ORADORES</h2>
-        </div>
-        <div class="member_2 member3">
-          <img src="img/maria_campos.jpg" width="150" height="150">
-          <h2>MARIA CAMPOS</h2>
-          <h3>FEUC</h3>
-          <h2>ORADORES</h2>
-        </div>
-        <div class="member_3 member3">
-          <img src="img/marlene_antunes.jpg" width="150" height="150">
-          <h2>MARLENE ANTUNES</h2>
-          <h3>FCTUC</h3>
-          <h2>ORADORES</h2>
-        </div>
-        <div class="member_4 member3">
-          <img src="img/vitor_sanfins.jpg" width="150" height="150">
-          <h2>VÍTOR SANFINS</h2>
-          <h3>FCTUC</h3>
-          <h2>ORADORES</h2>
-        </div>
-        <div class="member_5 member3">
-          <img src="img/raquel_rodrigues.jpg" width="150" height="150">
-          <h2>RAQUEL RODRIGUES</h2>
-          <h3>FMUC</h3>
-          <h2>ORADORES</h2>
-        </div>
-        <div class="member_5 member3">
-          <img src="img/rita_martins.jpg" width="150" height="150">
-          <h2>RITA MARTINS</h2>
-          <h3>FCTUC</h3>
-          <h2>ORADORES</h2>
+        <div class="member">
+          <img src='img/team/joao oliveira_1.png' onmouseover="this.src='img/team/joao oliveira_2.png';" onmouseout="this.src='img/team/joao oliveira_1.png';" />
+          <h2>João Oliveira</h2>
+          <p>Logística</p>
+          <p>FFUC</p>
         </div>
       </div>
 
-      <div class="container_members3">
-        <div class="member_1 member3">
-          <img src="img/barbara.jpg" width="150" height="150">
-          <h2>BÁRBARA GUEDES</h2>
-          <h3>FCTUC</h3>
-          <h2>ORADORES</h2>
+      <div class="m-container or">
+        <div class="member">
+          <img src='img/team/david magalhaes_1.png' onmouseover="this.src='img/team/david magalhaes_2.png';" onmouseout="this.src='img/team/david magalhaes_1.png';" />
+          <h2>David Magalhães</h2>
+          <p>Oradores</p>
+          <p>FLUC</p>
         </div>
-        <div class="member_2 member3">
-          <img src="img/edu.jpg" width="150" height="150">
-          <h2>EDUARDO OLIVEIRA</h2>
-          <h3>FMUC</h3>
-          <h2>ORADORES</h2>
+        <div class="member">
+          <img src='img/team/andre fontoura_1.png' onmouseover="this.src='img/team/andre fontoura_2.png';" onmouseout="this.src='img/team/andre fontoura_1.png';" />
+          <h2>André Fontoura</h2>
+          <p>Oradores</p>
+          <p>FMUC</p>
         </div>
-        <div class="member_3 member3">
-          <img src="img/lara_santos.jpg" width="150" height="150">
-          <h2>LARA SANTOS</h2>
-          <h3>FDUC</h3>
-          <h2>LOGÍSTICA</h2>
+        <div class="member">
+          <img src='img/team/rafaela loureiro_1.png' onmouseover="this.src='img/team/rafaela loureiro_2.png';" onmouseout="this.src='img/team/rafaela loureiro_1.png';" />
+          <h2>Rafaela Loureiro</h2>
+          <p>Oradores</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_4 member3">
-          <img src="img/joão_figueiredo.jpg" width="150" height="150">
-          <h2>JOÃO FIGUEIREDO</h2>
-          <h3>FMUC</h3>
-          <h2>LOGÍSTICA</h2>
+        <div class="member">
+          <img src='img/team/rafaela chambel_1.png' onmouseover="this.src='img/team/rafaela chambel_2.png';" onmouseout="this.src='img/team/rafaela chambel_1.png';" />
+          <h2>Rafaela Chambel</h2>
+          <p>Oradores</p>
+          <p>FLUC</p>
         </div>
-        <div class="member_5 member3">
-          <img src="img/beatriz_machado.jpg" width="150" height="150">
-          <h2>BEATRIZ MACHADO</h2>
-          <h3>FMUC</h3>
-          <h2>LOGÍSTICA</h2>
+        <div class="member">
+          <img src='img/team/laura angeja_1.png' onmouseover="this.src='img/team/laura angeja_2.png';" onmouseout="this.src='img/team/laura angeja_1.png';" />
+          <h2>Laura Angeja</h2>
+          <p>Oradores</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_5 member3">
-          <img src="img/mariana_paz.jpg" width="150" height="150">
-          <h2>MARIANA PAZ</h2>
-          <h3>FFUC</h3>
-          <h2>LOGÍSTICA</h2>
-        </div>
-      </div>
-
-      <div class="container_members3">
-        <div class="member_1 member3">
-          <img src="img/rui_mendes.jpg" width="150" height="150">
-          <h2>RUI MENDES</h2>
-          <h3>FFUC</h3>
-          <h2>LOGÍSTICA</h2>
-        </div>
-        <div class="member_2 member3">
-          <img src="img/catarina_nascimento.jpg" width="150" height="150">
-          <h2>CATARINA NASCIMENTO</h2>
-          <h3>FMUC</h3>
-          <h2>FUNDRAISING</h2>
-        </div>
-        <div class="member_3 member3">
-          <img src="img/daniel_rela.jpg" width="150" height="150">
-          <h2>DANIEL RELA</h2>
-          <h3>FPCEUC</h3>
-          <h2>FUNDRAISING</h2>
-        </div>
-        <div class="member_4 member3">
-          <img src="img/monica_santos.jpg" width="150" height="150">
-          <h2>MÓNICA SANTOS</h2>
-          <h3>FLUC</h3>
-          <h2>FUNDRAISING</h2>
-        </div>
-        <div class="member_5 member3">
-          <img src="img/ines_ribeiro.jpg" width="150" height="150">
-          <h2>INÊS RIBEIRO</h2>
-          <h3>FFUC</h3>
-          <h2>FUNDRAISING</h2>
-        </div>
-        <div class="member_5 member3">
-          <img src="img/francisca_martins.jpg" width="150" height="150">
-          <h2>FRANCISCA MARTINS</h2>
-          <h3>FFUC</h3>
-          <h2>COMUNICAÇÃO</h2>
+        <div class="member">
+          <img src='img/team/isabel pinto_1.png' onmouseover="this.src='img/team/isabel pinto_2.png';" onmouseout="this.src='img/team/isabel pinto_1.png';" />
+          <h2>Isabel Pinto</h2>
+          <p>Oradores</p>
+          <p>FLUC</p>
         </div>
       </div>
 
-      <div class="container_members2">
-        <div class="member_1 member2">
-          <img src="img/paula_pereira.jpg" width="150" height="150">
-          <h2>PAULA PEREIRA</h2>
-          <h3>FDUC</h3>
-          <h2>COMUNICAÇÃO</h2>
+
+      <div class="m-container img-cm">
+        <div class="member">
+          <img src='img/team/lumiar chaves_1.png' onmouseover="this.src='img/team/lumiar chaves_2.png';" onmouseout="this.src='img/team/lumiar chaves_1.png';" />
+          <h2>Lumiar Chaves</h2>
+          <p>Imagem</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_2 member2">
-          <img src="img/sara_lagoa.jpg" width="150" height="150">
-          <h2>SARA LAGOA</h2>
-          <h3>FLUC</h3>
-          <h2>COMUNICAÇÃO</h2>
+        <div class="member">
+          <img src='img/team/vicente paiva_1.png' onmouseover="this.src='img/team/vicente paiva_2.png';" onmouseout="this.src='img/team/vicente paiva_1.png';" />
+          <h2>Vicente Paiva</h2>
+          <p>Imagem</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_3 member2">
-          <img src="img/manuel afonso.jpg" width="150" height="150">
-          <h2>MANUEL AFONSO</h2>
-          <h3>FCTUC</h3>
-          <h2>IMAGEM</h2>
+        <div class="member">
+          <img src='img/team/david abergoaria_1.png' onmouseover="this.src='img/team/david abergoaria_2.png';" onmouseout="this.src='img/team/david abergoaria_1.png';" />
+          <h2>David Abergoaria</h2>
+          <p>Imagem</p>
+          <p>FMUC</p>
         </div>
-        <div class="member_4 member2">
-          <img src="img/castelobranco.jpg" width="150" height="150">
-          <h2>ANA CASTELO BRANCO</h2>
-          <h3>FMUC</h3>
-          <h2>IMAGEM</h2>
+        <div class="member">
+          <img src='img/team/filipa freitas_1.png' onmouseover="this.src='img/team/filipa freitas_2.png';" onmouseout="this.src='img/team/filipa freitas_1.png';" />
+          <h2>Filipa Freitas</h2>
+          <p>Comunicação</p>
+          <p>FCTUC</p>
         </div>
-        <div class="member_5 member2">
-          <img src="img/martim.jpg" width="150" height="150">
-          <h2>MARTIM CARVALHO</h2>
-          <h3>FCTUC</h3>
-          <h2>IMAGEM</h2>
+        <div class="member">
+          <img src='img/team/paula pereira_1.png' onmouseover="this.src='img/team/paula pereira_2.png';" onmouseout="this.src='img/team/paula pereira_1.png';" />
+          <h2>Paula Pereira</h2>
+          <p>Comunicação</p>
+          <p>FDUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/beatriz maia_1.png' onmouseover="this.src='img/team/beatriz maia_2.png';" onmouseout="this.src='img/team/beatriz maia_1.png';" />
+          <h2>Beatriz Maia</h2>
+          <p>Comunicação</p>
+          <p>FEUC</p>
         </div>
       </div>
+
+      <div class="m-container fund">
+        <div class="member">
+          <img src='img/team/aida vieira_1.png' onmouseover="this.src='img/team/aida vieira_2.png';" onmouseout="this.src='img/team/aida vieira_1.png';" />
+          <h2>Aida Vieira</h2>
+          <p>Fundraising</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/ana isabel bento_1.png' onmouseover="this.src='img/team/ana isabel bento_2.png';" onmouseout="this.src='img/team/ana isabel bento_1.png';" />
+          <h2>Ana Isabel Bento</h2>
+          <p>Fundraising</p>
+          <p>FCTUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/andre cortesao_1.png' onmouseover="this.src='img/team/andre cortesao_2.png';" onmouseout="this.src='img/team/andre cortesao_1.png';" />
+          <h2>André Cortesão</h2>
+          <p>Fundraising</p>
+          <p>FMUC</p>
+        </div>
+        <div class="member">
+          <img src='img/team/ema mendes_1.png' onmouseover="this.src='img/team/ema mendes_2.png';" onmouseout="this.src='img/team/ema mendes_1.png';" />
+          <h2>Ema Mendes</h2>
+          <p>Fundraising</p>
+          <p>FEUC</p>
+        </div>
+      </div>
+
+
+
+
 
     </section>
 
