--- a/tedtedx.html
+++ b/tedtedx.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="js/navbar.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TEDxUniversidadedeCoimbra</title>
+  <title>TED & TEDx</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
           <li><a href="program.html">PROGRAMA</a></li>
           <li><a href="partners.html">PARCEIROS</a></li>
           <li><a href="team.html">EQUIPA</a></li>
-          <li><a href="tickets.html">BILHETES</a></li>
+          <!-- <li><a href="tickets.html">BILHETES</a></li> -->
           <li><a href="anemia.html">ANEMIA</a></li>
           <li><a href="#">EDIÇÃO ANTERIOR</a></li>
         </ul>
@@ -39,7 +39,7 @@
             <a href="program.html">PROGRAMA</a>
             <a href="partners.html">PARCEIROS</a>
             <a href="team.html">EQUIPA</a>
-            <a href="tickets.html">BILHETES</a>
+            <!-- <a href="tickets.html">BILHETES</a> -->
             <a href="anemia.html">ANEMIA</a>
             <a href="#">EDIÇÃO ANTERIOR</a>
           </div>
