--- a/tedtedx.html
+++ b/tedtedx.html
@@ -30,22 +30,30 @@
           <li><a href="anemia.html">ANEMIA</a></li>
           <li><a href="#">EDIÇÃO ANTERIOR</a></li>
         </ul>
-        <div class="nav_2">
-          <label for="toggle">&#9776;</label>
-          <input type="checkbox" id="toggle" />
-          <div class="menu">
-            <a href="tedtedx.html">TED & TEDx</a>
-            <a href="orators.html">ORADORES</a>
-            <a href="program.html">PROGRAMA</a>
-            <a href="partners.html">PARCEIROS</a>
-            <a href="team.html">EQUIPA</a>
-            <!-- <a href="tickets.html">BILHETES</a> -->
-            <a href="anemia.html">ANEMIA</a>
-            <a href="#">EDIÇÃO ANTERIOR</a>
-          </div>
-        </div>
-      </div>
     </nav>
+
+    <section id="hamburguer">
+      <input id="menu-hamburguer" type="checkbox" class="check">
+      <label for="menu-hamburguer">
+        <div class="menu-select">
+          <span class="hamburguer"></span>
+        </div>
+      </label>
+      <div class="menu" id="hiddenMenu" style="display:none">
+        <ul>
+          <li><a href="tedtedx.html">TED & TEDx</a></li>
+          <li><a href="orators.html">ORADORES</a></li>
+          <li><a href="program.html">PROGRAMA</a></li>
+          <li><a href="partners.html">PARCEIROS</a></li>
+          <li><a href="team.html">EQUIPA</a></li>
+          <!-- <li><a href="tickets.html">BILHETES</a></li> -->
+          <li><a href="anemia.html">ANEMIA</a></li>
+          <li><a href="#">EDIÇÃO ANTERIOR</a></li>
+        </ul>
+      </div>
+      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script src="js/hamburguer.js"></script>
+    </section>
   </header>
 
   <main>
@@ -79,7 +87,7 @@
           inovadores de todo o mundo, capazes de mudar o mundo, para amplificar o impacto dos seus notáveis projetos e atividades.</p>
         <p>Podes seguir TED no Twitter em <a href="http://twitter.com/TEDTalks">http://twitter.com/TEDTalks</a> ou no Facebook <a href="http://www.facebook.com/TED">http://www.facebook.com/TED</a>.</p>
       </div>
-    <div class="compare-container tedx aos-init aos-animate" data-aos="fade-left">
+      <div class="compare-container tedx aos-init aos-animate" data-aos="fade-left">
         <img src=" img/tedxb.png" width="407" height="118">
         <p>x = evento organizado de forma independente No espírito das ideias que vale a pena partilhar, TEDx é um programa de eventos locais e auto-organizados que reúnem pessoas para partilhar uma experiência semelhante ao TED. Num evento TEDx,
           vídeos com TED Talks e oradores ao vivo são combinados para iniciar ligações e discussões profundas. Estes eventos auto-organizados são denominados TEDx, onde x = evento TED organizado de forma independente. A Conferência TED providencia
