--- a/program.html
+++ b/program.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
+  <!-- meta-tags -->
+  <meta name="description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
+  <meta name="keywords" content="tedx, tedx coimbra, tedx universidade de coimbra, palestras tedx, tedx metamorfose, tedx live">
+  <meta name="robots" content="index,follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" href="css/geral.css">
   <link rel="stylesheet" href="css/error.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ANEMIA</title>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="js/navbar.js"></script>
+  <title>Programa</title>
 </head>
   <body>
 
