--- a/team.html
+++ b/team.html
@@ -3,11 +3,19 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- meta-tags -->
+  <meta name="description" content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
+  <meta name="keywords" content="tedx, tedx coimbra, tedx universidade de coimbra, palestras tedx, tedx metamorfose, tedx live">
+  <meta name="robots" content="index,follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" href="css/geral.css">
   <link rel="stylesheet" href="css/team.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="js/navbar.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Equipa</title>
 </head>
 
@@ -40,6 +48,7 @@
       </label>
       <div class="menu" id="hiddenMenu" style="display:none">
         <ul>
+          <li><a href="index.html">INÍCIO</a></li>
           <li><a href="tedtedx.html">TED & TEDx</a></li>
           <li><a href="orators.html">ORADORES</a></li>
           <li><a href="program.html">PROGRAMA</a></li>
@@ -69,6 +78,8 @@
           essa fusão como base para este projeto. Consideramos que a associação da nossa Universidade a um evento desta magnitude, perante o apoio da Reitoria, constitui um passo essencial para o seu sucesso e permitir-nos-á honrar a
           interdisciplinaridade associada, não apenas aos eventos TEDx, mas também à nossa academia.”</p>
       </div>
+
+      <img src="img/linhas.png" alt="">
     </section>
 
 
