--- a/anemia.html
+++ b/anemia.html
@@ -74,6 +74,45 @@
     </section>
   </main>
 
+  <footer id="footer">
+    <div class="container_contact">
+      <div class="left">
+        <div class="social">
+          <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="30"></a>
+          <a target="_blank" href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="30"></a>
+          <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="30"></a>
+          <a target="_blank" href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="30"></a>
+        </div>
+        <p>Pólo das Ciências da Saúde da Universidade de Coimbra<br>Unidade Central, Piso -1<br>Azinhaga de Santa Comba, Celas<br>3000-548 Coimbra</p>
+      </div>
+      <div class="right">
+        <img src="img/qrcode.png" width="50">
+        <p>This independent TEDx event is operated under license from TED.</p>
+      </div>
+    </div>
+
+    <div class="contact_mobile">
+      <div class="leftM">
+        <div class="social">
+          <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="25"></a>
+          <a target="_blank" href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="25"></a>
+          <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="25"></a>
+          <a target="_blank" href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="25"></a>
+        </div>
+      </div>
+      <div class="midM">
+        <p>This independent TEDx event is operated under license from TED.</p>
+      </div>
+      <div class="rightM">
+        <img src="img/qrcode.png" width="50">
+      </div>
+    </div>
+
+    <div class="container_credit">
+      <p>© jeKnowledge 2020. ALL RIGHTS RESERVED</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
