--- a/orators.html
+++ b/orators.html
@@ -73,6 +73,12 @@
 
     <section id="orators-list">
 
+      <video id="direto-anim" autoplay muted loop>
+          <source src="img/direto.mov" />
+          <source src="img/direto.ogv" />
+          <source src="img/direto.webm"/>
+      </video>
+
       <div id="orator-info">
         <div class="info-bckg" onclick="orOut()"></div>
         <div class="info-container" id="pagamento-info">
@@ -82,7 +88,7 @@
         </div>
       </div>
 
-      <div class="orators-container">
+      <div class="orators-container" id="c-top">
 
         <div class="orator">
           <a class="orator-icon" id="clara-nao" onclick="orInfo()">
@@ -135,10 +141,10 @@
     <div class="container_contact">
       <div class="left">
         <div class="social">
-          <a href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="30"></a>
-          <a href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="30"></a>
-          <a href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="30"></a>
-          <a href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="30"></a>
+          <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="30"></a>
+          <a target="_blank" href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="30"></a>
+          <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="30"></a>
+          <a target="_blank" href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="30"></a>
         </div>
         <p>Pólo das Ciências da Saúde da Universidade de Coimbra<br>Unidade Central, Piso -1<br>Azinhaga de Santa Comba, Celas<br>3000-548 Coimbra</p>
       </div>
@@ -151,10 +157,10 @@
     <div class="contact_mobile">
       <div class="leftM">
         <div class="social">
-          <a href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="25"></a>
-          <a href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="25"></a>
-          <a href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="25"></a>
-          <a href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="25"></a>
+          <a target="_blank" href="https://www.facebook.com/tedxuniversidadedecoimbra/"><img src="img/fb.png" height="25"></a>
+          <a target="_blank" href="https://www.flickr.com/photos/146404210@N08/"><img src="img/fk.png" height="25"></a>
+          <a target="_blank" href="https://www.instagram.com/tedxuniversidadedecoimbra/"><img src="img/ig.png" height="25"></a>
+          <a target="_blank" href="mailto:tedxuniversidadedecoimbra@nemaac.net"><img src="img/ml.png" height="25"></a>
         </div>
       </div>
       <div class="midM">
@@ -166,7 +172,7 @@
     </div>
 
     <div class="container_credit">
-      <p>© jeKnowledge 2019. ALL RIGHTS RESERVED</p>
+      <p>© jeKnowledge 2020. ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
