--- a/tedtedx.html
+++ b/tedtedx.html
@@ -71,15 +71,13 @@
       <div class="container_video">
         <div class="play">
           <a href="#video" class="video_open">
-            <img width="150" height="150" src='img/play.png' onmouseover="this.src='img/playR.png';" onmouseout="this.src='img/play.png';" />
+            <img src='img/play.png' onmouseover="this.src='img/playR.png';" onmouseout="this.src='img/play.png';" />
           </a>
         </div>
         <div class="video" id="video">
           <div class="video_content">
             <a href="tedtedx.html" class="video_close">&times;</a>
-            <iframe class="videoG" width="1001" height="560" src="https://www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videoM" width="500,5" height="280" src="https://www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videoP" width="250,25" height="140" src="https://www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videoG" src="https://www.youtube.com/embed/d0NHOpeczUU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
     </section>
