--- a/orators.html
+++ b/orators.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="utf-8">
   <!-- meta-tags -->
+
   <meta name="description"
     content="O mundo está a mudar e o TEDxUniversidadedeCoimbra não ficou indiferente! Durante os dias 22, 23, 24, 25 e 26 de maio, a partir das 21:00h, reserva já o lugar mais confortável da tua casa e prepara-te para assistir ao primeiro evento TEDx em direto em Portugal no conforto do teu lar.">
   <meta name="keywords" content="tedx, tedx coimbra, tedx universidade de coimbra, palestras tedx, tedx metamorfose, tedx live">
   <meta name="robots" content="index,follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="og:title" content="TEDx UniversidadedeCoimbra" />
+  <meta name="og:image" content="img/background1.jpg" />
   <!-- favicon -->
   <link rel="icon" type="image/png" href="img/fav/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/fav/favicon-16x16.png" sizes="16x16" />
@@ -74,9 +77,9 @@
     <section id="orators-list">
 
       <video id="direto-anim" autoplay muted loop>
-          <source src="img/direto.mov" />
-          <source src="img/direto.ogv" />
-          <source src="img/direto.webm"/>
+        <source src="img/direto.mov" />
+        <source src="img/direto.ogv" />
+        <source src="img/direto.webm" />
       </video>
 
       <div id="orator-info">
