--- a/tedx19/vieworators.html
+++ b/tedx19/vieworators.html
@@ -62,7 +62,7 @@
       <div class="orador_1" id="orador_1">
         <div class="orador_1content">
           <a href="#oradores_list" class="orador_2close">&times;</a>
-          <img width="250" height="250" src="img/rabanea.png" />
+          <img src="img/rabanea.png" />
           <h2 class="orador_1heading">André Rabanea</h2>
           <p class="description">Cofounder & Creative at Beta-i, Founder & Chairman at Torkecc, Cofounder Stuntsoccer, Founder BillytheGroup</p>
           <p class="orador_1paragraph">Começa a sua carreira de forma nada convencional aos 17 anos e, com apenas 21, lança-se no mercado em Lisboa. É fundador da Torke, que foi considerada a mais premiada agência de marketing de guerrilha do Mundo,
@@ -79,7 +79,7 @@
       <div class="orador_2" id="orador_2">
         <div class="orador_2content">
           <a href="#oradores_list" class="orador_2close">&times;</a>
-          <img width="250" height="250" src="img/neiva.png" />
+          <img src="img/neiva.png" />
           <h2 class="orador_2heading">Miguel Neiva</h2>
           <p class="description">Ashoka, ColorADD Color Identification System, Miguel Neiva Atelier Design, lda</p>
           <p class="orador_2paragraph">Utilidade e paixão são os seus alicerces. Mestre em Design e Marketing, pela Universidade do Minho e licenciado em Design, Comunicação Visual, foi Presidente da Associação Portuguesa de Design durante vários
@@ -100,7 +100,7 @@
       <div class="orador_3" id="orador_3">
         <div class="orador_3content">
           <a href="#oradores_list" class="orador_3close">&times;</a>
-          <img width="250" height="250" src="img/laia.png" />
+          <img src="img/laia.png" />
           <h2 class="orador_3heading">Francisca Laia</h2>
           <p class="description"></p>
           <p class="orador_3paragraph">Médica que vale ouro, tomou contacto com o mundo da canoagem através do seu pai e iniciou o seu percurso em 2003 no Clube Desportivo “Os Patos” em Abrantes. Desde então tem vindo a colecionar medalhas e troféus
@@ -124,7 +124,7 @@
       <div class="orador_4" id="orador_4">
         <div class="orador_4content">
           <a href="#oradores_list" class="orador_4close">&times;</a>
-          <img width="250" height="250" src="img/carona.png" />
+          <img src="img/carona.png" />
           <h2 class="orador_4heading">Gustavo Carona</h2>
           <p class="orador_4paragraph">Nasceu em Toronto em 1980, mas vive na cidade do Porto desde 1982, onde tem todas as suas raízes. Licenciou-se pela Faculdade de Medicina da Universidade do Porto em 2004. Em 2011 concluiu a especialidade de
             Anestesiologia, e em 2014 a Sub-Especialidade de Cuidados Intensivos, ambas no Hospital de São Joao.
@@ -148,7 +148,7 @@
       <div class="orador_5" id="orador_5">
         <div class="orador_5content">
           <a href="#oradores_list" class="orador_5close">&times;</a>
-          <img width="250" height="250" src="img/batista.png" />
+          <img src="img/batista.png" />
           <h2 class="orador_5heading">André Batista</h2>
           <p class="description"></p>
           <p class="orador_5paragraph">Em 2018, com apenas 24 anos, André Baptista ganhou o título de "hacker mais valioso do mundo", durante a maior competição de hackers do mundo, H1-202, em Washignton, EUA. Natural de Coimbra, é hoje investigador
@@ -171,7 +171,7 @@
       <div class="orador_6" id="orador_6">
         <div class="orador_6content">
           <a href="#oradores_list" class="orador_6close">&times;</a>
-          <img width="250" height="250" src="img/khuloud.png" />
+          <img src="img/khuloud.png" />
           <h2 class="orador_6heading">Khuloud Kalthoum</h2>
           <p class="description"></p>
           <p class="orador_6paragraph">Esta oradora é um exemplo de coragem e adaptação. Em 2015, com apenas 26 anos, deixou Damasco, a cidade onde nasceu e cresceu, para fugir à guerra e a um cenário de destruição. Através da Plataforma Global para
@@ -198,7 +198,7 @@
       <div class="orador_7" id="orador_7">
         <div class="orador_7content">
           <a href="#oradores_list" class="orador_7close">&times;</a>
-          <img width="250" height="250" src="img/simao.png" />
+          <img src="img/simao.png" />
           <h2 class="orador_7heading">Simão Nogueira</h2>
           <p class="description"></p>
           <p class="orador_7paragraph">"45% família, amigos e copos, 45% pessoas, tecnologia e trabalho, 10% futuro e inovação. Ah sim… Algures no meio, estudar design, business e dormir (este último, só quando calha)”, é assim que se apresenta este
@@ -217,7 +217,7 @@
       <div class="orador_9" id="orador_9">
         <div class="orador_9content">
           <a href="#oradores_list" class="orador_9close">&times;</a>
-          <img width="250" height="250" src="img/prof.png" />
+          <img src="img/prof.png" />
           <h2 class="orador_9heading">Prof. José Pinto Gouveia</h2>
           <p class="description"></p>
           <p class="orador_9paragraph">José Augusto da Veiga Pinto de Gouveia é licenciado pela Universidade de Coimbra, nomeadamente pela Faculdade de Psicologia, tendo feito o seu doutoramento em Psicologia Clínica, e pela Faculdade de Medicina,
@@ -236,7 +236,7 @@
       <div class="orador_11" id="orador_11">
         <div class="orador_11content">
           <a href="#oradores_list" class="orador_11close">&times;</a>
-          <img width="250" height="250" src="img/capinha.png" />
+          <img src="img/capinha.png" />
           <h2 class="orador_11heading">Prof. Graça Capinha</h2>
           <p class="description"></p>
           <p class="orador_11paragraph">Nascida em 1959 e vinda de Idanha-a-Nova, Castelo Branco, apresentamo-vos por último, mas não menos importante, a Prof. Graça Capinha.
@@ -262,7 +262,7 @@
       <div class="orador_12" id="orador_12">
         <div class="orador_12content">
           <a href="#oradores_list" class="orador_12close">&times;</a>
-          <img width="250" height="250" src="img/real.png" />
+          <img src="img/real.png" />
           <h2 class="orador_12heading">Tomás Côrte-Real</h2>
           <p class="description"></p>
           <p class="orador_12paragraph">“Ao longo da minha vida foi-me sempre perguntado com que peça de Xadrez é que eu me identificava e se pudesse escolher entre nascer [Normal] ou [Diferente], o que escolheria. Algo que eu sempre respondi foi,
